Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96953

Spectrum app crashes once user play button after sound ended

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.3.0 Alpha
    • 6.2
    • Multimedia
    • None
    • Android
    • b9d508b7bb15d067c50ed6fbee8cae2cd6ee3cd0 (qt/qtmultimedia/dev) cb649e195a7a3a81a1df1abd99b8e60fe30ce5ce (qt/qtmultimedia/6.2)
    • 2021wk42POAndroid&Mobile, 2021wk44POAndroid&Mobile

      Steps to reproduce:
      1. Run spectrum example on Android device
      2. Select generated tone from Modes
      3. Once sound ended press play button

      Actual:
      App crashed
      Expected:
      App should not crash

        For Gerrit Dashboard: QTBUG-96953
        # Subject Branch Project Status CR V

            pekkagehor Pekka Gehör
            mateusz_sobal Mateusz Sobal
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes