Android: Fix for crashes issue of the Spectrum example

The Spectrum app does not crash anymore after the fix.

Fixes: QTBUG-96953
Change-Id: Ia555bdd21c3bc1ab0ada585c49441d6f8f548f8d
Reviewed-by: Samuel Mira <samuel.mira@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit b9d508b7bb15d067c50ed6fbee8cae2cd6ee3cd0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>